# jarvis

./: .dockerignore  .env  .gitignore  .gitleaks.toml  .gitmodules  .pre-commit-config.yaml  .restart.sh  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODEBASE_AUDIT_REPORT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.base  FIXES_APPLIED.md  LICENSE  README.md  SECURITY.md  bootstrap.sh  deploy_mobile.sh  docker-compose.yml  install.cmd  install.ps1  install.sh  jarvis-export-1775165802.json  jarvis-export-1775165866.json  open_chrome_tab.sh  package.json  pyproject.toml  release-please-config.json  renovate.json  requirements.pinned  uninstall.sh
.claude/: .mcp.json  CLAUDE.md  settings.json
.claude/agents/: agent-creator.md  code-reviewer.md  log-analyzer.md  planner.md  researcher.md  scout.md  worker.md
.claude/commands/: voice-deps.md  voice-logs.md  voice-restart.md  voice-tests.md
.claude/hooks/: SessionStart.sh  verify-before-done.sh
.claude/rules/: cli.md  desktop-tauri.md  regression-prevention.md  voice-agent.md
.claude/skills/: build-frontend.md  jarvis-status.md  lint-all.md  security-audit.md  test-jarvis.md  validate-jarvis.md
.github/: CODEOWNERS  dependabot.yml  labeler.yml  pull_request_template.md
.github/codeql/: codeql-config.yml
.github/workflows/: android-smoke.yml  cd-web-image.yml  claude-pr-review.yml  claude-security-review.yml  (+17 more)
.jarvis/: JARVIS.md  config.json  file-summaries.json  setup.sh
JARVIS-REPAIR/: 00-MASTER-PROMPT.md  01-ENGINEERING-CHARTER.md  02-SCOPE.md  03-STATE.md  README.md
brain/: .env.example  __init__.py  budget.py  cache.py  checkpoints.py  classifier.py  config.py  deduplicator.py  history.py  hooks.py  logging_config.py  main.py  models.py  oauth.py  permissions.py  pipeline.py  prompt_builder.py  prompts.py  requirements.txt  sandbox.py  server.py  service.py  sessions.py  sse.py  state.py  telemetry.py  voice_gate.py
core/: Cargo.toml  build.rs
core/src/: main.rs  server.rs
docs/: 2026-05-15-pre-realtime-snapshot.md  2026-05-16-jarvis-global-review.md  2026-05-17-jarvis-enterprise-grade-plan.md  2026-05-17-jarvis-repo-map.md  2026-07-02-autodata-lessons.md  2026-07-02-continuous-evolution-and-shadow-trial-design.md  API keys  decisions-pending.md  env-reference.md  install.sh
extensions/: jarvis-screen-firefox.xpi  jarvis-screen.crx  jarvis-screen.pem
nginx/: nginx.conf
os/: Makefile  create-vm.sh  setup-jarvis-os.sh
os/kernel/: Cargo.toml  build-image.sh  rust-toolchain.toml
os/kernel/src/: main.rs
os/kernel/src/drivers/: framebuffer.rs  keyboard.rs  mod.rs  serial.rs  vga.rs
os/kernel/src/interrupts/: mod.rs
os/kernel/src/ipc/: mod.rs
os/kernel/src/jarvis/: mod.rs  neural.rs  subsystems.rs
os/kernel/src/memory/: frame.rs  heap.rs  mod.rs  paging.rs
os/kernel/src/scheduler/: mod.rs
os/kernel/src/syscall/: mod.rs
plans/: 001-web-auth-gate-tests.md  002-ci-quality-gates-blocking.md  003-env-reference-doc.md  004-restart-task-exception-logging.md  005-web-settings-storage-path.md  006-settings-baseurl-validation.md  007-image-intent-heuristic.md  008-web-dep-form-data-advisory.md  009-automod-gate-path-extraction-hardening.md  010-automod-prompt-blocklist-sync.md  011-watchdog-verify-rollback-health.md  README.md
proto/: jarvis.proto
research/: frontier_brain_architecture.md  neural_efficiency_techniques.md  neuroscience_memory_models.md
scripts/: audit-hallucinations.py  auto-update.sh  build_skills_index.py  check-hub-core-sync.sh  check-windows-footguns.py  ct104-deploy.sh  deploy-webhook.py  deploy.sh  dev.sh  fix-audio.sh  fix_broken_stubs.py  fix_syntax.py  install-service.sh  jarvis-backup-local.sh  jarvis-backup-offsite.sh  jarvis-dep-check.sh  jarvis-dep-update.sh  jarvis-on-network.sh  jarvis-on-resume.sh  jarvis-purge-poisoned-history.sh  jarvis-retention-prune.sh  launch-desktop.py  logs.sh  post-update-check.sh  render-canned-phrases.py  rotate-jarvis-logs.sh  run_tests.sh  self-deploy.sh  setup-mcp-servers.sh  start-all.ps1  start-all.sh  start-backend.sh  start-cli.sh  start-jarvis.sh  stop-jarvis.sh  test-mcp-servers.py  ts_to_py_converter.py
setup/: install-lib.sh  livekit-server.bin.sha256
shells/desktop/src-tauri/: Cargo.toml  tauri.conf.json
shells/desktop/src-tauri/src/: main.rs
src/: QueryEngine.py  Tool.py  app.py  assistant_core.py  bootstrap_core.py  brain.py  checkpoints.py  commands_registry.py  config.py  context.py  conversation_history.py  costHook.py  cost_tracker.py  dialogLaunchers.py  entrypoints_core.py  hardware.py  history.py  interactiveHelpers.py  logging_config.py  main.py  migrations_brain.py  oauth.py  output_styles_brain.py  permissions.py  permissions_enhanced.py  projectOnboardingState.py  prompt_builder.py  replLauncher.py  sandbox.py  secrets.py  service.py  sessions.py  setup.py  setup_wizard.py  voice_brain.py
src/android/app/src/main/cpp/: CMakeLists.txt  llama_bridge.cpp  pty_bridge.cpp  vt_parser.cpp
src/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
src/desktop-tauri/src-tauri/capabilities/: default.json
src/desktop-tauri/src-tauri/resources/: run-manifest.json
src/desktop-tauri/src-tauri/src/: kiosk.rs  main.rs  supervisor.rs  tray_kiosk.rs
src/os/kernel/: Cargo.toml  README.md  rust-toolchain.toml
src/os/kernel/.cargo/: config.toml
src/os/kernel/scripts/: run.sh
src/os/kernel/src/: gdt.rs  interrupts.rs  main.rs  serial.rs  vga.rs
test/: test_agent_loop.py  test_agents_comprehensive.py  test_bash_security.py  test_behavioral_evals.py  test_command_registry.py  test_commands_registry_ext.py  test_coordinator.py  test_coordinator_enhanced.py  test_deepsearch.py  test_enhanced_mcp.py  test_hooks.py  test_master_orchestrator.py  test_new_modules.py  test_parallel_dispatch.py  test_permission_matcher.py  test_permissions.py  test_plugins.py  test_ported_modules.py  test_providers.py  test_services_wiring.py  test_session_storage.py  test_sessions.py  test_swarm.py  test_tasks.py  test_token_mechanisms.py  test_tools.py  test_tools_comprehensive.py  test_vault.py  test_web_security.py
(+5134 files in other folders)
