[project]
name = "jarvis"
version = "3.0.0"
description = "J.A.R.V.I.S. — Autonomous AI Agent"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "openai",
    "aiohttp",
    "numpy",
    "msgpack",
    "edge-tts",
    "faster-whisper",
    "sounddevice",
]

[project.optional-dependencies]
vision = ["Pillow", "mss", "pytesseract"]
tts = ["piper-tts"]
all = ["jarvis[vision,tts]"]

[project.scripts]
jarvis = "src.shells.cli.jarvis_cli:run"
jarvis-web = "src.shells.web.server:main"

[tool.setuptools.packages.find]
include = ["src*"]
