[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "3.0.0"
description = "J.A.R.V.I.S. — Autonomous AI Agent"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "openai",
    "aiohttp",
    "aiohttp-socks",
    "numpy",
    "msgpack",
    "edge-tts",
    "faster-whisper",
    "sounddevice",
    "duckduckgo-search",
    "beautifulsoup4",
    "requests",
    "pyyaml",
    "pydantic",
    "Pillow",
]

[project.optional-dependencies]
vision = ["opencv-python", "mss", "pytesseract"]
tts = ["piper-tts"]
desktop = ["PyGObject"]
all = ["jarvis[vision,tts,desktop]"]

[project.scripts]
jarvis = "src.cli.jarvis_cli:run"
jarvis-web = "src.server.web_server:main"
jarvis-desktop = "src.desktop.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
