[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "3.0.0"
description = "J.A.R.V.I.S. — Autonomous AI Agent"
requires-python = ">=3.10"
dependencies = [
    "anthropic",
    "openai",
    "aiohttp",
    "aiohttp-socks",
    "numpy",
    "msgpack",
    "edge-tts",
    "faster-whisper",
    "sounddevice",
    "duckduckgo-search",
    "beautifulsoup4",
    "requests",
    "pyyaml",
    "pydantic",
    "Pillow",
    "PyNaCl",
    "wcwidth",
    # Device auth (Ed25519 keypair)
    "cryptography",
    # Cron expression parsing (scheduler.py)
    "croniter",
    # PostgreSQL — short-term conversation memory
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.0",
    # Weaviate — long-term semantic memory
    "weaviate-client>=4.0.0",
    # LangChain — RAG pipeline, document loaders, structured output, observability
    "langchain-core>=0.3.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    # Embeddings (local, no API key required)
    "sentence-transformers>=3.0.0",
    # Document parsing
    "pypdf>=4.0.0",
    "unstructured>=0.15.0",
    # LangSmith observability (opt-in via LANGCHAIN_TRACING_V2=true)
    "langsmith>=0.2.0",
    # NOTE: chromadb removed — Weaviate handles both RAG docs and long-term memory
]

[project.optional-dependencies]
vision = ["opencv-python", "mss", "pytesseract"]
tts = ["piper-tts"]
dev = ["watchdog"]
langgraph = ["langgraph>=0.4.0"]
all = ["jarvis[vision,tts,dev,langgraph]"]

[project.scripts]
jarvis = "src.cli.jarvis_cli:run"
jarvis-web = "src.server.web_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]
