[package]
name = "jarvis-kernel"
version = "0.1.0"
edition = "2021"
authors = ["Ulrich"]
description = "JARVIS Microkernel — Autonomous Intelligence Operating System"

[dependencies]
bootloader_api = "0.11"
x86_64 = "0.15"
uart_16550 = "0.3"
pic8259 = "0.11"
pc-keyboard = "0.8"
spin = "0.9"
linked_list_allocator = "0.10"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = 2
lto = true
